--- a/Lab-1/Lab 1 /dropbox/dropbox/react_server/public/index.html
+++ b/Lab-1/Lab 1 /dropbox/dropbox/react_server/public/index.html
@@ -32,6 +32,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- for bootstrap css -->
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
+
     <title>Dropbox</title>
   </head>
   <body>
